# FitnessTracker

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
Data/: workoutData.csv
Utils/: DisplayMenu.cpp  DisplayMenu.hpp  calorieChecker.cpp  calorieChecker.hpp  fitness.cpp  fitness.hpp  workoutAssign.cpp  workoutAssign.hpp  workoutLogger.cpp  workoutLogger.hpp  workoutReccomendation.cpp  workoutReccomendation.hpp
include/: calorieChecker.h  workoutLogger.h  workoutReccomendation.h
src/: DisplayMenu.cpp  calorieChecker.cpp  workoutLogger.cpp  workoutReccomendation.cpp
test/: testingV1.cpp
